<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:background="@drawable/bg_stroke"
    card_view:circularflow_radiusInDP="15dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_stroke"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_item_dialog_songket_picture"
            android:layout_width="339dp"
            android:layout_height="290dp"
            android:layout_margin="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/image_songket"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@color/black"
            android:background="@android:color/transparent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.497"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.048"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_fabricname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="25sp"
            android:text="@string/songket_dummy"
            android:textColor="@color/primary"
            card_view:layout_constraintEnd_toEndOf="@+id/iv_item_dialog_songket_picture"
            card_view:layout_constraintHorizontal_bias="0.503"
            card_view:layout_constraintStart_toStartOf="@+id/iv_item_dialog_songket_picture"
            card_view:layout_constraintTop_toBottomOf="@+id/iv_item_dialog_songket_picture" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/white"
            android:text="@string/check_detail"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.508"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_fabricname" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>